--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -3,7 +3,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans|Sumana:700" rel="stylesheet">
 
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css" />
-<link rel="stylesheet" type="text/css" href="/site.css" />
+<link rel="stylesheet" type="text/css" href="/saule/site.css" />
 
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
 
