--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -9,7 +9,7 @@
   <body>
     <div class="site-title">
       <div class="titles">
-        <h1 class="title"><a href="/">Saule</a></h1>
+        <h1 class="title"><a href="{{site.baseurl}}/">Saule</a></h1>
         <h2 class="subtitle">JSON API for ASP.NET</h2>
       </div>
       <h3 class="github"><a href="https://github.com/{{site.repository}}">View on Github</a></h3>
