--- a/docs/_includes/head.html
+++ b/docs/_includes/head.html
@@ -5,7 +5,9 @@
 <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/6.0.0/normalize.min.css" />
 <link rel="stylesheet" type="text/css" href="{{site.baseurl}}/site.css" />
 
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, user-scalable=1" />
 
 <meta name="description" content="Saule is an JSON API library for ASP.Net Web API 2" />
 <meta name="keywords" content="JSON API,Saule,JSON,Ember,Ember Data,ASP.Net,ASP,Web API" />
+
+<meta name="theme-color" content="#225555" />
